Refactor emotion child code formatting and fix minor issues
- Break long function calls across multiple lines for better readability
- Fix test name from "pai_adolescent" to "pai_adol"
- Update chunk labels to be more specific (e.g., qtbl-emotion-child-self)
- Enable previously disabled figure evaluation
- Uncomment Typst domain template code
- Update VS Code workspace theme colors

Signed-off-by: brainworkup <j.trampush@gmail.com>

--- a/_02-10_emotion_child.qmd
+++ b/_02-10_emotion_child.qmd
@@ -55,7 +55,13 @@ emotion <- emotion |>
 
 # Write the 'emotion' data frame to a CSV file
 # The file name is derived from the 'pheno' variable
-readr::write_excel_csv(emotion, here::here("data", paste0(pheno, ".csv")), na = "", col_names = TRUE, append = FALSE)
+readr::write_excel_csv(
+  emotion,
+  here::here("data", paste0(pheno, ".csv")),
+  na = "",
+  col_names = TRUE,
+  append = FALSE
+)
 ```
 
 ```{r}
@@ -177,12 +183,20 @@ data_emotion <-
 # Self-report
 data_emotion_self <-
   data_emotion |>
-  dplyr::filter(test == "basc3_srp_child" | test == "basc3_srp_adolescent" | test == "basc3_srp_college" | test == "pai_adolescent") |>
+  dplyr::filter(
+    test == "basc3_srp_child" |
+      test == "basc3_srp_adolescent" |
+      test == "basc3_srp_college" |
+      test == "pai_adol"
+  ) |>
   dplyr::arrange(dplyr::desc(percentile)) |>
   dplyr::distinct(.keep_all = FALSE)
 
 # Flatten the text
-bwu::cat_neuropsych_results(data = data_emotion_self, file = "_02-10_emotion_child_text_self.qmd")
+bwu::cat_neuropsych_results(
+  data = data_emotion_self,
+  file = "_02-10_emotion_child_text_self.qmd"
+)
 ```
 
 ```{r}
@@ -194,12 +208,20 @@ bwu::cat_neuropsych_results(data = data_emotion_self, file = "_02-10_emotion_chi
 # Parent report
 data_emotion_parent <-
   data_emotion |>
-  dplyr::filter(test == "basc3_prs_preschool" | test == "basc3_prs_child" | test == "basc3_prs_adolescent" | test == "basc3_prs_college") |>
+  dplyr::filter(
+    test == "basc3_prs_preschool" |
+      test == "basc3_prs_child" |
+      test == "basc3_prs_adolescent" |
+      test == "basc3_prs_college"
+  ) |>
   dplyr::arrange(dplyr::desc(percentile)) |>
   dplyr::distinct(.keep_all = FALSE)
 
 # Flatten the text
-bwu::cat_neuropsych_results(data = data_emotion_parent, file = "_02-09_emotion_child_text_parent.qmd")
+bwu::cat_neuropsych_results(
+  data = data_emotion_parent,
+  file = "_02-09_emotion_child_text_parent.qmd"
+)
 ```
 
 ```{r}
@@ -211,16 +233,24 @@ bwu::cat_neuropsych_results(data = data_emotion_parent, file = "_02-09_emotion_c
 # Teacher report
 data_emotion_teacher <-
   data_emotion |>
-  dplyr::filter(test == "basc3_trs_preschool" | test == "basc3_trs_child" | test == "basc3_trs_adolescent" | test == "basc3_trs_college") |>
+  dplyr::filter(
+    test == "basc3_trs_preschool" |
+      test == "basc3_trs_child" |
+      test == "basc3_trs_adolescent" |
+      test == "basc3_trs_college"
+  ) |>
   dplyr::arrange(dplyr::desc(percentile)) |>
   dplyr::distinct(.keep_all = FALSE)
 
 # Flatten the text
-bwu::cat_neuropsych_results(data = data_emotion_teacher, file = "_02-09_emotion_child_text_teacher.qmd")
+bwu::cat_neuropsych_results(
+  data = data_emotion_teacher,
+  file = "_02-09_emotion_child_text_teacher.qmd"
+)
 ```
 
 ```{r}
-#| label: qtbl-emotion-child
+#| label: qtbl-emotion-child-self
 #| dev: tikz
 #| fig-process: pdf2png
 #| include: false
@@ -233,16 +263,24 @@ vertical_padding <- 0
 multiline <- TRUE
 
 # source note
-source_note <- gt::md("_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
+source_note <- gt::md(
+  "_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
 
-_Note_: Personal Adjustment scores are reversed.")
+_Note_: Personal Adjustment scores are reversed."
+)
 
 # footnotes
 fn_t_score <- gt::md("T-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
 
 # define the groupings for the table
 grp_emotion <- list(
-  t_score = c("BASC-3 SRP Adolescent", "BASC-3 TRS Adolescent", "BASC-3 PRS Adolescent", "PAI", "MMPI-3")
+  t_score = c(
+    "BASC-3 SRP Adolescent",
+    "BASC-3 TRS Adolescent",
+    "BASC-3 PRS Adolescent",
+    "PAI",
+    "MMPI-3"
+  )
 )
 
 grp_self <- list(
@@ -252,7 +290,11 @@ grp_self <- list(
 # redo this bc got sorted by pct
 data_emotion_self <-
   data_emotion |>
-  dplyr::filter(test == "basc3_srp_child" | test == "basc3_srp_adolescent" | test == "basc3_srp_college") |>
+  dplyr::filter(
+    test == "basc3_srp_child" |
+      test == "basc3_srp_adolescent" |
+      test == "basc3_srp_college"
+  ) |>
   dplyr::distinct(.keep_all = FALSE)
 
 # make `gt` table
@@ -270,7 +312,7 @@ bwu::tbl_gt(
 ```
 
 ```{r}
-#| label: qtbl-emotion-parent
+#| label: qtbl-emotion-child-parent
 #| dev: tikz
 #| fig-process: pdf2png
 #| include: false
@@ -283,15 +325,25 @@ vertical_padding <- 0
 multiline <- TRUE
 
 # source note
-source_note <- gt::md("_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
+source_note <- gt::md(
+  "_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
 
-_Note_: Adaptive Skills scores are reversed.")
+_Note_: Adaptive Skills scores are reversed."
+)
 
 # footnotes
 fn_t_score <- gt::md("T-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
 
 grp_emotion <- list(
-  t_score = c("BASC-3 SRP Adolescent", "BASC-3 TRS Adolescent", "BASC-3 PRS Adolescent", "PAI", "MMPI-3", "BASC-3 PRS", "BASC-3 PRS")
+  t_score = c(
+    "BASC-3 SRP Adolescent",
+    "BASC-3 TRS Adolescent",
+    "BASC-3 PRS Adolescent",
+    "PAI",
+    "MMPI-3",
+    "BASC-3 PRS",
+    "BASC-3 PRS"
+  )
 )
 
 grp_parent <- list(
@@ -326,7 +378,7 @@ bwu::tbl_gt(
 ```
 
 ```{r}
-#| label: qtbl-emotion-teacher
+#| label: qtbl-emotion-child-teacher
 #| dev: tikz
 #| fig-process: pdf2png
 #| include: false
@@ -339,9 +391,11 @@ vertical_padding <- 0
 multiline <- TRUE
 
 # source note
-source_note <- gt::md("_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
+source_note <- gt::md(
+  "_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
 
-_Note_: Personal Adjustment scores are reversed.")
+_Note_: Personal Adjustment scores are reversed."
+)
 
 # footnotes
 fn_t_score <- gt::md("T-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
@@ -357,16 +411,23 @@ grp_teacher <- list(
 
 # Clean scale names
 data_emotion_teacher <-
-  dplyr::mutate(data_emotion_teacher,
+  dplyr::mutate(
+    data_emotion_teacher,
     scale = stringr::str_remove_all(
-      scale, "PAI |BASC-3 |MMPI-3 "
+      scale,
+      "PAI |BASC-3 |MMPI-3 "
     )
   )
 
 # redo this bc got sorted by pct
 data_emotion_teacher <-
   data_emotion |>
-  dplyr::filter(test == "basc3_trs_preschool", test == "basc3_trs_child" | test == "basc3_trs_adolescent" | test == "basc3_trs_college") |>
+  dplyr::filter(
+    test == "basc3_trs_preschool",
+    test == "basc3_trs_child" |
+      test == "basc3_trs_adolescent" |
+      test == "basc3_trs_college"
+  ) |>
   dplyr::distinct(.keep_all = FALSE)
 
 # make `gt` table
@@ -384,15 +445,20 @@ bwu::tbl_gt(
 ```
 
 ```{r}
-#| label: fig-emotion-child
+#| label: fig-emotion-child-self
 #| include: false
 #| fig-cap: "Mood/Child Self-Report"
-#| eval: false
+#| eval: true
 
 # df child
 df_child <-
   dplyr::filter(data) |>
-  dplyr::filter(test == "basc3_srp_child" | test == "basc3_srp_adolescent" | test == "basc3_srp_college" | test == "pai_adolescent")
+  dplyr::filter(
+    test == "basc3_srp_child" |
+      test == "basc3_srp_adolescent" |
+      test == "basc3_srp_college" |
+      test == "pai_adol"
+  )
 
 # `bwu` dotplot arguments
 colors <- NULL
@@ -422,7 +488,7 @@ options(warn = 0) # Reset to default behavior
 ```
 
 ```{r}
-#| label: fig-emotion-parent
+#| label: fig-emotion-child-parent
 #| include: false
 #| fig-cap: "Mood/Parent-Report"
 #| eval: true
@@ -430,7 +496,11 @@ options(warn = 0) # Reset to default behavior
 # df parent
 df_parent <-
   dplyr::filter(data) |>
-  dplyr::filter(test == "basc3_prs_parent" | test == "basc3_prs_adolescent" | test == "basc3_prs_college")
+  dplyr::filter(
+    test == "basc3_prs_parent" |
+      test == "basc3_prs_adolescent" |
+      test == "basc3_prs_college"
+  )
 
 # Dotplot arguments
 filename <- "fig_emotion_parent.svg"
@@ -462,7 +532,7 @@ options(warn = 0) # Reset to default behavior
 ```
 
 ```{r}
-#| label: fig-emotion-teacher
+#| label: fig-emotion-child-teacher
 #| include: false
 #| fig-cap: "Mood/Teacher Report"
 #| eval: false
@@ -500,7 +570,7 @@ options(warn = 0) # Reset to default behavior
 ```
 
 ```{r}
-#| label: fig-emotion-child-scale
+#| label: fig-emotion-child-self-scale
 #| include: false
 #| fig-cap: "Mood/Self-Report"
 #| eval: false
@@ -529,7 +599,7 @@ options(warn = 0) # Reset to default behavior
 ```
 
 ```{r}
-#| label: fig-emotion-parent-scale
+#| label: fig-emotion-child-parent-scale
 #| include: false
 #| fig-cap: "Mood/Parent Report"
 #| eval: false
@@ -558,7 +628,7 @@ options(warn = 0) # Reset to default behavior
 ```
 
 ```{r}
-#| label: fig-emotion-teacher-scale
+#| label: fig-emotion-child-teacher-scale
 #| include: false
 #| fig-cap: "Mood/Teacher Report"
 #| eval: false
@@ -623,16 +693,16 @@ options(warn = 0) # Reset to default behavior
 ```
 ```{=typst}
 // Define the title of the domain
-//#let title = "Behavioral/Emotional/Social"
+#let title = "Behavioral/Emotional/Social"
 
 // Define the file name of the table
-//#let file_qtbl = "table_emotion_child.png"
+#let file_qtbl = "table_emotion_child.png"
 
 // Define the file name of the figure
-//#let file_fig = "fig_emotion_child.svg"
+#let file_fig = "fig_emotion_child.svg"
 
 // Call the 'domain' function with the specified title, table file name, and figure file name
-//#domain(title: [#title], file_qtbl, file_fig)
+#domain(title: [#title], file_qtbl, file_fig)
 ```
 ### PARENT RATINGS
 
